--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Index</title>
+    <link href="styles/index.css" rel="stylesheet">
   </head>
   <body>
     <!-- Main container -->
@@ -10,16 +11,37 @@
       <!-- Header div -->
       <div class="header">
         <img src="assests/images/logo.png" alt="logo" width="150px" height="100px">
-        <br>
-        Header Div
+        <a href="login.html" target="_blank">Login</a>
       </div>
       <!-- Content div -->
       <div class="content">
-        Content Div
+        <!-- Search Bar div -->
+        <div class="searchbar">
+          Search Bar
+        </div>
+        <!-- Images div -->
+        <div class="images">
+          <a href="list.html" target="_self">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="New Delhi">
+          </a>
+          <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="Goa">
+          <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="Hyderabad">
+          <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="Kolkata">
+        </div>
+        <!-- View more link -->
+        <a href="#">View more >></a>
       </div>
       <!-- Footer div -->
       <div class="footer">
-        Footer Div
+        <!-- Contact us link -->
+        <a href="contact.html" target="_blank">Contact Us</a>
+        <!-- Social media links -->
+        <div class="social-links">
+          <a href="https://www.facebook.com/" target="_blank"><img src="assests/images/facebook.png" alt="facebook"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="assests/images/instagram.png" alt="instagram"></a>
+          <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
+        </div>
+        &copy; 2021 ROOM SEARCH PVT. LTD.
       </div>
     </div>
   </body>
