--- a/detail.html
+++ b/detail.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Detail</title>
+    <link rel="stylesheet" href="styles/detail.css">
   </head>
   <body>
     <!-- Main container -->
@@ -10,16 +11,35 @@
       <!-- Header div -->
       <div class="header">
         <img src="assests/images/logo.png" alt="logo" width="150px" height="100px">
-        <br>
-        Header Div
+        <a href="login.html" target="_blank">Login</a>
       </div>
       <!-- Content div -->
       <div class="content">
-        Content Div
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
+        <br><a href="payment.html">Book Now</a>
+        <h2>Radisson Blu Hotel</h2> <p>RATINGS</p> <p>5 Star</p>
+        <p>AMENITIES</p>
+        <ul>
+          <li>Room service</li>
+          <li>Restaurant</li>
+          <li>Business center</li>
+          <li>Fitness center</li>
+          <li>Pool</li>
+        </ul>
+        <h5>DESCRIPTION</h5>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean diam felis, sollicitudin in est nec, fermentum luctus mauris. Integer enim ex, faucibus vel iaculis nec, pretium sed odio. Mauris tortor lorem, aliquam quis felis et, lobortis fermentum ex.</p>
       </div>
       <!-- Footer div -->
       <div class="footer">
-        Footer Div
+        <!-- Contact us link -->
+        <a href="contact.html" target="_blank">Contact Us</a>
+        <!-- Social media links -->
+        <div class="social-links">
+          <a href="https://www.facebook.com/" target="_blank"><img src="assests/images/facebook.png" alt="facebook"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="assests/images/instagram.png" alt="instagram"></a>
+          <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
+        </div>
+        &copy; 2021 ROOM SEARCH PVT. LTD.
       </div>
     </div>
   </body>
