--- a/list.html
+++ b/list.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>List</title>
+    <link href="styles/list.css" rel="stylesheet">
   </head>
   <body>
     <!-- Main container -->
@@ -10,16 +11,46 @@
       <!-- Header div -->
       <div class="header">
         <img src="assests/images/logo.png" alt="logo" width="150px" height="100px">
-        <br>
-        Header Div
+        <a href="login.html" target="_blank">Login</a>
       </div>
       <!-- Content div -->
       <div class="content">
-        Content Div
+        <ul>
+          <li><a href="#">List View</a></li>
+          <li><a href="#">Map View</a></li>
+        </ul>
+        <!-- Hotels Info -->
+        <!--Clickable info Div-->
+        <a href="detail.html" class="hotels">
+          <div class="hotels">
+            <!-- Hotel 1 - Radisson Blu, New Delhi -->
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
+            <h3>Radisson Blu Hotel</h3><p>5 Star</p><p>New Delhi</p>
+          </div>
+        </a>
+
+        <!-- Hotel 2 - The Lalit, New Delhi -->
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="The Lalit">
+        <h3>The Lalit New Delhi</h3><p>4.5 Star</p><p>New Delhi</p>
+
+        <!-- Hotel 3 - Taj Palace, New Delhi -->
+        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="Taj Palace">
+        <h3>Taj Palace</h3><p>4.0 Star</p><p>New Delhi</p>
+
+        <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="Map Image">
+        <p>MAP VIEW</p>
       </div>
       <!-- Footer div -->
       <div class="footer">
-        Footer Div
+        <!-- Contact us link -->
+        <a href="contact.html" target="_blank">Contact Us</a>
+        <!-- Social media links -->
+        <div class="social-links">
+          <a href="https://www.facebook.com/" target="_blank"><img src="assests/images/facebook.png" alt="facebook"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="assests/images/instagram.png" alt="instagram"></a>
+          <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
+        </div>
+        &copy; 2021 ROOM SEARCH PVT. LTD.
       </div>
     </div>
   </body>
