--- a/payment.html
+++ b/payment.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Payment</title>
+    <link rel="stylesheet" href="styles/payment.css">
   </head>
   <body>
     <!-- Main container -->
@@ -10,16 +11,39 @@
       <!-- Header div -->
       <div class="header">
         <img src="assests/images/logo.png" alt="logo" width="150px" height="100px">
-        <br>
-        Header Div
+        <a href="login.html" target="_blank">Login</a>
       </div>
       <!-- Content div -->
       <div class="content">
-        Content Div
+        <!-- Hotel details div -->
+        <div class="hotel-detail">
+          <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
+          <h2>Radisson Blu Hotel</h2>
+          <p>#38 of 1,289 hotels in New Delhi</p>
+          <p>National Highway 8, New Delhi 110017 India</p>
+        </div>
+        <!-- Payment details div -->
+        <div class="payment-detail">
+          <p><b>Name: </b>John Doe</p>
+          <p><b>Number of Adults: </b>2</p>
+          <p><b>Check-in Date: </b>02/12/2021</p>
+          <p><b>Check-out Date: </b>07/12/2021</p>
+          <p><b>Tariff Breakdown: </b>Rs.1000 x 2 Adults x 5 Nights</p>
+          <p><b>Total Amount: </b>Rs.10000</p>
+          <a href="#">Pay Now</a>
+        </div>
       </div>
       <!-- Footer div -->
       <div class="footer">
-        Footer Div
+        <!-- Contact us link -->
+        <a href="contact.html" target="_blank">Contact Us</a>
+        <!-- Social media links -->
+        <div class="social-links">
+          <a href="https://www.facebook.com/" target="_blank"><img src="assests/images/facebook.png" alt="facebook"></a>
+          <a href="https://www.instagram.com/" target="_blank"><img src="assests/images/instagram.png" alt="instagram"></a>
+          <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
+        </div>
+        &copy; 2021 ROOM SEARCH PVT. LTD.
       </div>
     </div>
   </body>
