--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,15 @@
   </head>
   <body>
     <div class="container">
-      CONTACT US
+      <p>Thank you for reaching out!!!</p>
+      <p>Please enter your email and we will get back to you</p>
+      <!-- FORM -->
+      <form class="" action="index.html" method="GET" autocomplete="off" target="_self">
+        <!--Email is required-->
+        <input type="email" name="email" value="" placeholder="Enter your email" required>
+        <br>
+        <button type="submit" name="button">Submit</button>
+      </form>
     </div>
   </body>
 </html>
