--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
       <!-- Header div -->
       <div class="header">
         <img src="assests/images/logo.png" alt="logo" width="150px" height="100px">
-        <a href="login.html" target="_blank">Login</a>
+        <a href="login.html" target="_self">Login</a>
       </div>
       <!-- Content div -->
       <div class="content">
         <!-- Search Bar div -->
         <div class="searchbar">
-          Search Bar
+          <input type="text" name="searchbar" value="" placeholder="City">
         </div>
         <!-- Images div -->
         <div class="images">
@@ -34,7 +34,7 @@
       <!-- Footer div -->
       <div class="footer">
         <!-- Contact us link -->
-        <a href="contact.html" target="_blank">Contact Us</a>
+        <a href="contact.html" target="_self">Contact Us</a>
         <!-- Social media links -->
         <div class="social-links">
           <a href="https://www.facebook.com/" target="_blank"><img src="assests/images/facebook.png" alt="facebook"></a>
