--- a/login.html
+++ b/login.html
@@ -6,7 +6,17 @@
   </head>
   <body>
     <div class="container">
-      LOGIN
+      <!--FORM-->
+      <form class="" action="index.html" method="GET" autocomplete="off" target="_self">
+        <!--All fields required-->
+        <label for="username">Username: </label>
+        <input type="text" name="username" value="" placeholder="Enter Username" required>
+        <br>
+        <label for="password">Password: </label>
+        <input type="password" name="password" value="" placeholder="Enter Password" required>
+        <br>
+        <button type="submit" name="button">Login</button>
+      </form>
     </div>
   </body>
 </html>
