--- a/payment.html
+++ b/payment.html
@@ -10,8 +10,8 @@
     <div class="container">
       <!-- Header div -->
       <div class="header">
-        <img src="assests/images/logo.png" alt="logo" width="150px" height="100px">
-        <a href="login.html" target="_blank">Login</a>
+        <a href="index.html"><img src="assests/images/logo.png" alt="logo" width="150px" height="100px"></a>
+        <a href="login.html" target="_self">Login</a>
       </div>
       <!-- Content div -->
       <div class="content">
@@ -36,7 +36,7 @@
       <!-- Footer div -->
       <div class="footer">
         <!-- Contact us link -->
-        <a href="contact.html" target="_blank">Contact Us</a>
+        <a href="contact.html" target="_self">Contact Us</a>
         <!-- Social media links -->
         <div class="social-links">
           <a href="https://www.facebook.com/" target="_blank"><img src="assests/images/facebook.png" alt="facebook"></a>
