--- a/detail.html
+++ b/detail.html
@@ -9,13 +9,13 @@
     <!-- Main container -->
     <div class="container">
       <!-- Header div -->
-      <div class="header">
+      <header>
         <!--Clickable logo to redirect to index.html-->
         <a href="index.html"><img src="assests/images/logo.png" alt="logo" width="150px" height="100px"></a>
         <a href="login.html" target="_self">Login</a>
-      </div>
-      <!-- Content div -->
-      <div class="content">
+      </header>
+      <!-- Content - main -->
+      <main>
         <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
         <!-- FORM -->
         <form class="" action="payment.html" method="GET" autocomplete="off">
@@ -50,9 +50,9 @@
         </ul>
         <h5>DESCRIPTION</h5>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean diam felis, sollicitudin in est nec, fermentum luctus mauris. Integer enim ex, faucibus vel iaculis nec, pretium sed odio. Mauris tortor lorem, aliquam quis felis et, lobortis fermentum ex.</p>
-      </div>
+      </main>
       <!-- Footer div -->
-      <div class="footer">
+      <footer>
         <!-- Contact us link -->
         <a href="contact.html" target="_self">Contact Us</a>
         <!-- Social media links -->
@@ -62,7 +62,7 @@
           <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
         </div>
         &copy; 2021 ROOM SEARCH PVT. LTD.
-      </div>
+      </footer>
     </div>
   </body>
 </html>
