--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <!-- Main container -->
     <div class="container">
       <!-- Header div -->
-      <div class="header">
+      <header>
         <img src="assests/images/logo.png" alt="logo" width="150px" height="100px">
         <a href="login.html" target="_self">Login</a>
-      </div>
-      <!-- Content div -->
-      <div class="content">
+      </header>
+      <!-- Content - main -->
+      <main>
         <!-- Search Bar div -->
         <div class="searchbar">
           <input type="text" name="searchbar" value="" placeholder="City">
@@ -30,9 +30,9 @@
         </div>
         <!-- View more link -->
         <a href="#">View more >></a>
-      </div>
+      </main>
       <!-- Footer div -->
-      <div class="footer">
+      <footer>
         <!-- Contact us link -->
         <a href="contact.html" target="_self">Contact Us</a>
         <!-- Social media links -->
@@ -42,7 +42,7 @@
           <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
         </div>
         &copy; 2021 ROOM SEARCH PVT. LTD.
-      </div>
+      </footer>
     </div>
   </body>
 </html>
