--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,16 @@
     <title>Contact</title>
   </head>
   <body>
-    <div class="container">
-      <p>Thank you for reaching out!!!</p>
-      <p>Please enter your email and we will get back to you</p>
-      <!-- FORM -->
-      <form class="" action="index.html" method="GET" autocomplete="off" target="_self">
-        <!--Email is required-->
-        <input type="email" name="email" value="" placeholder="Enter your email" required>
-        <br>
-        <button type="submit" name="button">Submit</button>
-      </form>
-    </div>
+      <div class="container"> <!--Can change the class container div to <main> tag, to show main content-->
+        <p>Thank you for reaching out!!!</p>
+        <p>Please enter your email and we will get back to you</p>
+        <!-- FORM -->
+        <form class="" action="index.html" method="GET" autocomplete="off" target="_self">
+          <!--Email is required-->
+          <input type="email" name="email" value="" placeholder="Enter your email" required>
+          <br>
+          <button type="submit" name="button">Submit</button>
+        </form>
+      </div>
   </body>
 </html>
