--- a/list.html
+++ b/list.html
@@ -9,40 +9,41 @@
     <!-- Main container -->
     <div class="container">
       <!-- Header div -->
-      <div class="header">
+      <header>
         <!--Clickable logo to redirect to index.html-->
         <a href="index.html"><img src="assests/images/logo.png" alt="logo" width="150px" height="100px"></a>
         <a href="login.html" target="_self">Login</a>
-      </div>
-      <!-- Content div -->
-      <div class="content">
+      </header>
         <ul>
-          <li><a href="#">List View</a></li>
-          <li><a href="#">Map View</a></li>
+          <li><a href="#list-view">List View</a></li>
+          <li><a href="#map-view">Map View</a></li>
         </ul>
         <!-- Hotels Info -->
         <!--Clickable info Div-->
-        <a href="detail.html" class="hotels">
-          <div class="hotels">
-            <!-- Hotel 1 - Radisson Blu, New Delhi -->
-            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
-            <h3>Radisson Blu Hotel</h3><p>5 Star</p><p>New Delhi</p>
-          </div>
-        </a>
+        <div id="list-view">
+          <a href="detail.html" class="hotels">
+            <div class="hotels">
+              <!-- Hotel 1 - Radisson Blu, New Delhi -->
+              <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
+              <h3>Radisson Blu Hotel</h3><p>5 Star</p><p>New Delhi</p>
+            </div>
+          </a>
 
-        <!-- Hotel 2 - The Lalit, New Delhi -->
-        <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="The Lalit">
-        <h3>The Lalit New Delhi</h3><p>4.5 Star</p><p>New Delhi</p>
+          <!-- Hotel 2 - The Lalit, New Delhi -->
+          <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="The Lalit">
+          <h3>The Lalit New Delhi</h3><p>4.5 Star</p><p>New Delhi</p>
 
-        <!-- Hotel 3 - Taj Palace, New Delhi -->
-        <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="Taj Palace">
-        <h3>Taj Palace</h3><p>4.0 Star</p><p>New Delhi</p>
+          <!-- Hotel 3 - Taj Palace, New Delhi -->
+          <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="Taj Palace">
+          <h3>Taj Palace</h3><p>4.0 Star</p><p>New Delhi</p>
+        </div>
 
-        <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="Map Image">
-        <p>MAP VIEW</p>
-      </div>
+        <div id="map-view">
+          <img src="https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png" alt="Map Image">
+          <p>MAP VIEW</p>
+        </div>
       <!-- Footer div -->
-      <div class="footer">
+      <footer>
         <!-- Contact us link -->
         <a href="contact.html" target="_self">Contact Us</a>
         <!-- Social media links -->
@@ -52,7 +53,7 @@
           <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
         </div>
         &copy; 2021 ROOM SEARCH PVT. LTD.
-      </div>
+      </footer>
     </div>
   </body>
 </html>
