--- a/payment.html
+++ b/payment.html
@@ -9,12 +9,12 @@
     <!-- Main container -->
     <div class="container">
       <!-- Header div -->
-      <div class="header">
+      <header>
         <a href="index.html"><img src="assests/images/logo.png" alt="logo" width="150px" height="100px"></a>
         <a href="login.html" target="_self">Login</a>
-      </div>
-      <!-- Content div -->
-      <div class="content">
+      </header>
+      <!-- Content - main -->
+      <main>
         <!-- Hotel details div -->
         <div class="hotel-detail">
           <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
@@ -32,9 +32,9 @@
           <p><b>Total Amount: </b>Rs.10000</p>
           <a href="#">Pay Now</a>
         </div>
-      </div>
+      </main>
       <!-- Footer div -->
-      <div class="footer">
+      <footer>
         <!-- Contact us link -->
         <a href="contact.html" target="_self">Contact Us</a>
         <!-- Social media links -->
@@ -44,7 +44,7 @@
           <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
         </div>
         &copy; 2021 ROOM SEARCH PVT. LTD.
-      </div>
+      </footer>
     </div>
   </body>
 </html>
