--- a/detail.html
+++ b/detail.html
@@ -39,17 +39,19 @@
           <button type="submit" name="button">Book Now</button>
         </form>
         <!-- <br><a href="payment.html">Book Now</a> -->
-        <h2>Radisson Blu Hotel</h2> <p>RATINGS</p> <p>5 Star</p>
-        <p>AMENITIES</p>
-        <ul>
-          <li>Room service</li>
-          <li>Restaurant</li>
-          <li>Business center</li>
-          <li>Fitness center</li>
-          <li>Pool</li>
-        </ul>
-        <h5>DESCRIPTION</h5>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean diam felis, sollicitudin in est nec, fermentum luctus mauris. Integer enim ex, faucibus vel iaculis nec, pretium sed odio. Mauris tortor lorem, aliquam quis felis et, lobortis fermentum ex.</p>
+        <div class="hotel-info">
+          <h2>Radisson Blu Hotel</h2> <p>RATINGS</p> <p>5 Star</p>
+          <p>AMENITIES</p>
+          <ul>
+            <li>Room service</li>
+            <li>Restaurant</li>
+            <li>Business center</li>
+            <li>Fitness center</li>
+            <li>Pool</li>
+          </ul>
+          <h5>DESCRIPTION</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean diam felis, sollicitudin in est nec, fermentum luctus mauris. Integer enim ex, faucibus vel iaculis nec, pretium sed odio. Mauris tortor lorem, aliquam quis felis et, lobortis fermentum ex.</p>
+        </div>
       </main>
       <!-- Footer div -->
       <footer>
