--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="login.html" target="_self">Login</a>
       </header>
       <!-- Content - main -->
-      <main>
+      <div class=".main">
         <!-- Search Bar div -->
         <div class="searchbar">
           <input type="text" name="searchbar" value="" placeholder="City">
@@ -22,15 +22,14 @@
         <!-- Images div -->
         <div class="images">
           <a href="list.html" target="_self">
-            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="New Delhi">
-          </a>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" alt="New Delhi"></a>
           <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" alt="Goa">
           <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" alt="Hyderabad">
           <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="Kolkata">
         </div>
         <!-- View more link -->
         <a href="#">View more >></a>
-      </main>
+      </div>
       <!-- Footer div -->
       <footer>
         <!-- Contact us link -->
