--- a/loader.html
+++ b/loader.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Loader</title>
+    <link href="styles/loader.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
-      LOADER
+      <!-- LOADER -->
+      <div class="loader"></div>
     </div>
   </body>
 </html>
