--- a/payment.html
+++ b/payment.html
@@ -16,22 +16,24 @@
       <!-- Content - main -->
       <main>
         <!-- Hotel details div -->
-        <div class="hotel-detail">
+        <div class="hotel-details">
           <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
           <h2>Radisson Blu Hotel</h2>
           <p>#38 of 1,289 hotels in New Delhi</p>
           <p>National Highway 8, New Delhi 110017 India</p>
         </div>
         <!-- Payment details div -->
-        <div class="payment-detail">
+        <div class="payment-details">
           <p><b>Name: </b>John Doe</p>
           <p><b>Number of Adults: </b>2</p>
           <p><b>Check-in Date: </b>02/12/2021</p>
           <p><b>Check-out Date: </b>07/12/2021</p>
-          <p><b>Tariff Breakdown: </b>Rs.1000 x 2 Adults x 5 Nights</p>
-          <p><b>Total Amount: </b>Rs.10000</p>
-          <a href="#">Pay Now</a>
+          <div class="tariff-details">
+            <p><b>Tariff Breakdown: </b>Rs.1000 x 2 Adults x 5 Nights</p>
+            <p><b>Total Amount: </b>Rs.10000</p>
+          </div>
         </div>
+        <a href="#">Pay Now</a>
       </main>
       <!-- Footer div -->
       <footer>
