--- a/detail.html
+++ b/detail.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Detail</title>
     <link rel="stylesheet" href="styles/detail.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Main container -->
@@ -63,7 +64,8 @@
           <a href="https://www.instagram.com/" target="_blank"><img src="assests/images/instagram.png" alt="instagram"></a>
           <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
         </div>
-        &copy; 2021 ROOM SEARCH PVT. LTD.
+        <!--Copyright text-->
+        <span id="copyright">&copy; 2021 ROOM SEARCH PVT. LTD.</span>
       </footer>
     </div>
   </body>
