--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Index</title>
     <link href="styles/index.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Main container -->
@@ -16,8 +17,8 @@
       <!-- Content - main -->
       <div class=".main">
         <!-- Search Bar div -->
-        <div class="searchbar">
-          <input type="text" name="searchbar" value="" placeholder="City">
+        <div class="searchbardiv">
+          <div class="searchbar"><input type="text" name="searchbar" value="" placeholder="City"></div>
         </div>
         <!-- Images div -->
         <div class="images">
@@ -28,7 +29,7 @@
           <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" alt="Kolkata">
         </div>
         <!-- View more link -->
-        <a href="#">View more >></a>
+        <div id="viewmore"><a href="#">View more >></a></div>
       </div>
       <!-- Footer div -->
       <footer>
@@ -40,7 +41,8 @@
           <a href="https://www.instagram.com/" target="_blank"><img src="assests/images/instagram.png" alt="instagram"></a>
           <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
         </div>
-        &copy; 2021 ROOM SEARCH PVT. LTD.
+        <!--Copyright text-->
+        <span id="copyright">&copy; 2021 ROOM SEARCH PVT. LTD.</span>
       </footer>
     </div>
   </body>
