--- a/list.html
+++ b/list.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>List</title>
     <link href="styles/list.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Main container -->
@@ -14,12 +15,12 @@
         <a href="index.html"><img src="assests/images/logo.png" alt="logo" width="150px" height="100px"></a>
         <a href="login.html" target="_self">Login</a>
       </header>
-        <ul>
+        <ul> <!--List of links to see views-->
           <li><a href="#list-view">List View</a></li>
           <li><a href="#map-view">Map View</a></li>
         </ul>
         <!-- Hotels Info -->
-        <!--Clickable info Div-->
+          <!--Clickable info Div-->
         <div id="list-view">
             <a href="detail.html">
               <div class="hotels">
@@ -56,7 +57,8 @@
           <a href="https://www.instagram.com/" target="_blank"><img src="assests/images/instagram.png" alt="instagram"></a>
           <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
         </div>
-        &copy; 2021 ROOM SEARCH PVT. LTD.
+        <!--Copyright text-->
+        <span id="copyright">&copy; 2021 ROOM SEARCH PVT. LTD.</span>
       </footer>
     </div>
   </body>
