--- a/payment.html
+++ b/payment.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Payment</title>
     <link rel="stylesheet" href="styles/payment.css">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Main container -->
@@ -33,7 +34,7 @@
             <p><b>Total Amount: </b>Rs.10000</p>
           </div>
         </div>
-        <a href="#">Pay Now</a>
+        <div id="paynow"><a href="#">Pay Now</a></div>
       </main>
       <!-- Footer div -->
       <footer>
@@ -45,7 +46,8 @@
           <a href="https://www.instagram.com/" target="_blank"><img src="assests/images/instagram.png" alt="instagram"></a>
           <a href="https://twitter.com/" target="_blank"><img src="assests/images/twitter.png" alt="twitter"></a>
         </div>
-        &copy; 2021 ROOM SEARCH PVT. LTD.
+        <!--Copyright text-->
+        <span id="copyright">&copy; 2021 ROOM SEARCH PVT. LTD.</span>
       </footer>
     </div>
   </body>
