--- a/detail.html
+++ b/detail.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detail</title>
     <link href="styles/common.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/detail.css">
@@ -10,6 +11,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   </head>
   <body>
     <!-- Main container -->
@@ -24,8 +27,32 @@
       <!-- Content - main -->
       <div id="content">
         <div id="hotel-Registration">
-            <div id="img-Div">
-           <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radison" id="Radison"></div>
+          <!-- <div id="img-Div">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radison" id="Radison">
+          </div> -->
+          <div id="slideshow-container">
+                        <div id="carousel-controls" class="carousel slide" data-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="slider-image" class="d-block w-100" src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="First slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="slider-image" class="d-block w-100" src="https://media-cdn.tripadvisor.com/media/photo-o/01/fa/51/70/r-the-spa.jpg" alt="Second slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="slider-image" class="d-block w-100" src="https://media-cdn.tripadvisor.com/media/photo-w/0e/b2/64/3f/radisson-blu-plaza-delhi.jpg" alt="Third slide">
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carousel-controls" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#carousel-controls" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
 
         <div id="Form-register">
             <form action="payment.html" method="get" border=1>
@@ -57,7 +84,13 @@
         <p id="Description">
             <h2>Radison Blu Hotel</h2>
             <p><h4>RATING</h4></p>
-           <p>5 Star</p>
+            <div id="rating">
+               <span class="fa fa-star checked" id="1"></span>
+               <span class="fa fa-star checked" id="2"></span>
+               <span class="fa fa-star checked" id="3"></span>
+               <span class="fa fa-star checked" id="4"></span>
+               <span class="fa fa-star checked" id="5"></span>
+            </div>
             <p>
                <h4>AMENITIES</h4>
                 <ul>
