--- a/list.html
+++ b/list.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List</title>
     <link href="styles/common.css" rel="stylesheet">
     <link href="styles/list.css" rel="stylesheet">
@@ -10,6 +11,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <!-- Main container -->
@@ -38,7 +40,15 @@
                 <!-- Hotel 1 - Radisson Blu, New Delhi -->
                 <img src="https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg" alt="Radisson Blu Hotel">
                 <div class="hotels-info">
-                  <h3>Radisson Blu Hotel</h3><p>5 Star</p><p>New Delhi</p>
+                  <h3>Radisson Blu Hotel</h3>
+                  <div id="rating">
+                      <span class="fa fa-star checked" id="1"></span>
+                      <span class="fa fa-star checked" id="2"></span>
+                      <span class="fa fa-star checked" id="3"></span>
+                      <span class="fa fa-star checked" id="4"></span>
+                      <span class="fa fa-star checked" id="5"></span>
+                  </div>
+                  <p>New Delhi</p>
                 </div>
               </div>
             </a>
@@ -47,7 +57,15 @@
               <!-- Hotel 2 - The Lalit, New Delhi -->
               <img src="https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg" alt="The Lalit">
               <div class="hotels-info">
-                <h3>The Lalit New Delhi</h3><p>4.5 Star</p><p>New Delhi</p>
+                <h3>The Lalit New Delhi</h3>
+                <div id="rating">
+                    <span class="fa fa-star checked" id="1"></span>
+                    <span class="fa fa-star checked" id="2"></span>
+                    <span class="fa fa-star checked" id="3"></span>
+                    <span class="fa fa-star-half-o checked" id="4"></span>
+                    <span class="fa fa-star" id="5"></span>
+                </div>
+                <p>New Delhi</p>
               </div>
             </div>
 
@@ -55,7 +73,15 @@
             <!-- Hotel 3 - Taj Palace, New Delhi -->
             <img src="https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg" alt="Taj Palace">
             <div class="hotels-info">
-              <h3>Taj Palace</h3><p>4.0 Star</p><p>New Delhi</p>
+              <h3>Taj Palace</h3>
+              <div id="rating">
+                  <span class="fa fa-star checked" id="1"></span>
+                  <span class="fa fa-star checked" id="2"></span>
+                  <span class="fa fa-star checked" id="3"></span>
+                  <span class="fa fa-star checked" id="4"></span>
+                  <span class="fa fa-star" id="5"></span>
+              </div>
+              <p>New Delhi</p>
             </div>
           </div>
         </div>
