--- a/payment.html
+++ b/payment.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Payment</title>
     <link href="styles/common.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/payment.css">
